dummy-http-client/istio/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: dummy-http-client
spec:
  selector:
    matchLabels:
     app: dummy-http-client
  replicas: 1
  template:
    metadata:
      labels:
        app: dummy-http-client
    spec:
      containers:
      - name: dummy-http-client
        image: szaqal/dummy-http-client:latest
        imagePullPolicy: Always
